All slides with examples

--- a/slides/data-wrangling-and-analysis-slides.html
+++ b/slides/data-wrangling-and-analysis-slides.html
@@ -105,7 +105,7 @@ bad_names %&gt;%
 ##  n obs: 10 
 ##  n variables: 3 
 ## 
-## ── Variable type:character ──────────────────────────────────────────────────────────────────────────────────────────────────
+## ── Variable type:character ──────────────────────────────────────────────────────────────
 ##    variable missing complete  n min max empty n_unique
 ##  Age Decade       0       10 10   3   5     0        5
 ```
@@ -158,7 +158,7 @@ good_names %&gt;%
 ##  n obs: 10 
 ##  n variables: 3 
 ## 
-## ── Variable type:character ──────────────────────────────────────────────────────────────────────────────────────────────────
+## ── Variable type:character ──────────────────────────────────────────────────────────────
 ##    variable missing complete  n min max empty n_unique
 ##  age_decade       0       10 10   3   5     0        5
 ```
