--- a/slides/data-wrangling-and-analysis-slides.html
+++ b/slides/data-wrangling-and-analysis-slides.html
@@ -202,7 +202,7 @@ class:inverse
 
 class: inverse, center, middle, dk-section-title
 
-The remainder of this course does not use slides. 
+The remainder of this section of the course does not use slides. 
 
 See instead [this RMarkdown document](https://github.com/rfortherestofus/fundamentals/blob/master/data-wrangling-and-analysis-examples.Rmd) with examples.
 
