--- a/sample-report.html
+++ b/sample-report.html
@@ -255,9 +255,7 @@ h6 {
 </style>
 
 
-</head>
 
-<body>
 
 <style type="text/css">
 .main-container {
@@ -288,8 +286,6 @@ summary {
 </style>
 
 
-
-<div class="container-fluid main-container">
 
 <!-- tabsets -->
 
@@ -364,13 +360,22 @@ $(document).ready(function () {
 
 
 
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
+
+
+
 
 <div class="fluid-row" id="header">
 
 
 
 <h1 class="title toc-ignore">My Super Fancy Report</h1>
-<h4 class="author"><em>David Keyes</em></h4>
+<h4 class="author">David Keyes</h4>
 
 </div>
 
@@ -400,7 +405,7 @@ $(document).ready(function () {
 ##  n obs: 50 
 ##  n variables: 2 
 ## 
-## ── Variable type:numeric ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+## ── Variable type:numeric ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ##  variable missing complete  n  mean    sd p0 p25 p50 p75 p100     hist
 ##      dist       0       50 50 42.98 25.77  2  26  36  56  120 ▃▇▇▅▂▂▁▁
 ##     speed       0       50 50 15.4   5.29  4  12  15  19   25 ▁▂▃▇▅▅▃▃</code></pre>
